add wasm output to the project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
+[game_of_life]
 crate-type = ["cdylib"]
 
 [dependencies]
