--- a/space_invaders/Cargo.toml
+++ b/space_invaders/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.63"
 wee_alloc = { version = "0.4.5", optional = true }
+rusty_time = "0.11.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
